--- a/css/styles.css
+++ b/css/styles.css
@@ -14,6 +14,7 @@
 body {
   background-color: var(--primary-bg-color);
   color: var(--primary-text-color);
+  font-family: "Roboto", sans-serif;
 }
 .list {
   list-style: none;
@@ -21,9 +22,11 @@ body {
 /* Logo */
 .logo {
   color: var(--accent-color);
+  font-family: "Raleway", sans-serif;
 }
 .colortext {
   color: var(--title-text-color);
+  font-family: "Raleway", sans-serif;
 }
 
 /* Site nav */
@@ -85,4 +88,11 @@ body {
 }
 .section-footer .colortext {
   color: var(--primary-bg-color);
+}
+
+/* Portfolio page */
+/* Projects section */
+
+.projects-section-title {
+  color: var(--title-text-color);
 }
