--- a/css/styles.css
+++ b/css/styles.css
@@ -9,13 +9,16 @@
   --title-text-color: #212121;
   --accent-color: #2196f3;
   --primary-bg-color: #ffffff;
+  --contact-footer-color: rgba(255, 255, 255, 0.6);
+  --footer-bg-color: #2f303a;
+  --team-bg-color: #f5f4fa;
 }
 
 body {
   background-color: var(--primary-bg-color);
   color: var(--primary-text-color);
   font-family: "Roboto", sans-serif;
-  letter-spacing: 0.03em;
+  font-size: 14px;
 }
 .list {
   list-style: none;
@@ -28,42 +31,41 @@ body {
   font-weight: bold;
   font-size: 26px;
   line-height: 1.2;
+  letter-spacing: 0.03em;
   text-decoration: none;
 }
-.colortext {
+.color-text {
   color: var(--title-text-color);
   font-family: "Raleway", sans-serif;
 }
 
 /* Site nav */
-.site-nav a {
+.site-nav-link {
   color: var(--title-text-color);
 
   font-weight: 500;
-  font-size: 14px;
   line-height: 1.14;
   letter-spacing: 0.02em;
   text-decoration: none;
 }
-.site-nav a:hover,
-.site-nav a:focus {
+.site-nav-link:hover,
+.site-nav-link:focus {
   color: var(--accent-color);
 }
-.site-nav .link.current {
+.site-nav-link.current {
   color: var(--accent-color);
 }
 /* Contact nav */
-.contact-nav a {
+.contact-nav-link {
   color: var(--primary-text-color);
 
   font-weight: 500;
-  font-size: 14px;
   line-height: 1.14;
   letter-spacing: 0.02em;
   text-decoration: none;
 }
-.contact-nav a:hover,
-.contact-nav a:focus {
+.contact-nav-link:hover,
+.contact-nav-link:focus {
   color: var(--accent-color);
 }
 
@@ -104,6 +106,7 @@ body {
   font-weight: 700;
   font-size: 36px;
   line-height: 1.17;
+  letter-spacing: 0.03em;
   text-align: center;
 }
 
@@ -112,48 +115,70 @@ body {
   color: var(--title-text-color);
 
   font-weight: 700;
-  font-size: 14px;
   line-height: 1.14;
+  letter-spacing: 0.03em;
 }
 
 .skills-text {
-  font-size: 14px;
   line-height: 1.71;
+  letter-spacing: 0.03em;
 }
 
 /* Images */
 
 /* Team */
+.section-iteam {
+  background-color: var(--team-bg-color);
+}
+.team-item {
+  background-color: var(--primary-bg-color);
+}
 .team .title {
   color: var(--title-text-color);
 
   font-weight: 500;
   font-size: 16px;
   line-height: 1.19;
+  letter-spacing: 0.03em;
 }
 
 .team-text {
   font-size: 16px;
   line-height: 1.19;
+  letter-spacing: 0.03em;
 }
 
 /* Footer */
 .adress {
   color: var(--primary-bg-color);
 
-  font-size: 14px;
   line-height: 1.71;
+  letter-spacing: 0.03em;
   text-decoration: none;
+  font-style: normal;
 }
-.contact-footer a {
-  color: rgba(255, 255, 255, 0.6);
 
-  font-size: 14px;
-  line-height: 24px;
-  text-decoration: none;
+.adress:hover,
+.adress:focus {
+  color: var(--accent-color);
 }
+
+.contact-footer-list {
+  color: var(--contact-footer-color);
+
+  line-height: 24px;
+  letter-spacing: 0.03em;
+  text-decoration: none;
+  font-style: normal;
+}
+
+.contact-footer-list:hover,
+.contact-footer-list:focus {
+  color: var(--accent-color);
+}
+
 .section-footer {
-  background-color: #2f303a;
+  background-color: var(--footer-bg-color);
 }
 .section-footer .colortext {
   color: var(--primary-bg-color);
@@ -161,12 +186,14 @@ body {
 
 /* Portfolio page */
 /* Project-filter */
+.buttons-btn {
+  font-family: "Roboto", sans-serif;
+}
+
 .buttons-btn:hover,
 .buttons-btn:focus {
   background-color: var(--accent-color);
   color: white;
-
-  cursor: pointer;
 }
 
 /* Projects section buttons-list li button */
@@ -183,4 +210,5 @@ body {
 .projects-section-text {
   font-size: 16px;
   line-height: 1.88;
+  letter-spacing: 0.03em;
 }
